@@ -5,7 +5,7 @@ copyright_holder = L<Raudssus Social Software|http://www.raudssus.de/>
 copyright_year   = 2011
 
 [Prereqs]
-Moo = 0.009002
+Moo = 0.009005
 perl = 5.010
 
 [Prereqs / TestRequires]
