@@ -20,10 +20,15 @@ has use_secondary => (
 	default => sub { 1 },
 );
 
+has params => (
+	is => 'ro',
+	default => sub {{}},
+);
+
 sub find_keywords {
 	my ( $self, $primary, $secondary ) = @_;
 	$primary = $secondary if !$primary;
-	return [] if !$primary;
+	return () if !$primary;
 	my @founds;
 	my @keywordlists;
 	my $klpos = 0;
@@ -39,7 +44,7 @@ sub find_keywords {
 			$kl->[1]--;
 			my $found;
 			splice(@keywordlists, $idx, 1) if (!$kl->[1]);
-			my $rx = qr/(^|[^\w]|[^\#])($keyword)/i;
+			my $rx = qr/(^|[^\w#])($keyword)/i;
 			my @text_found;
 			my $primary_str = $primary;
 			push (@text_found, [$primary_str =~ $rx]), $primary_str =~ s{$rx}{} while $primary_str =~ $rx;
