@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+	- Added params to container
+	- Fixed regexp for matching
 
 0.001     2011-01-10 06:12:42 Europe/Berlin
 	- Initial official release
